Improved Insula & Market models and workflow Added support for normal maps Improved lighting system Fixed text inputs overflow with clipboard Improved Pathfinding (WIP) Improved GameLoop Improved UX for placing objects Added Inf. value for FPS Slider and added support for similar features Fixed issue with leading spaces in GuiTextInput